--- a/travel-fee-calculator.html
+++ b/travel-fee-calculator.html
@@ -54,7 +54,7 @@
 <body>
 
 <h2>Travel Fee Calculator</h2>
-<p>Enter your ZIP code to see your travel fee based on distance from 46901.</p>
+<p>Enter your ZIP code to see your travel fee.</p>
 
 <input id="zipInput" type="text" placeholder="Enter ZIP code">
 <button onclick="calculateFee()">Show My Fee</button>
@@ -98,5 +98,6 @@ function calculateFee() {
 </body>
 
 </html>
+
 
 
